fix supervisor command

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,16 @@
 nodaemon=true
 
 [program:php5-fpm]
-command=service php5-fpm start
+command=/usr/sbin/php5-fpm -F
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:nginx]
-command=service nginx start
+command=/usr/sbin/nginx -g "daemon off;"
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+;[program:uwsgi]
+;command=/usr/local/bin/uwsgi /data/uwsgi.ini
+;stopsignal=QUIT
+;;stopasgroup=true
